--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,12 @@
         "statusBarItem.hoverBackground": "#d04649",
         "statusBar.foreground": "#e7e7e7"
     },
-    "peacock.color": "#b52e31"
+    "peacock.color": "#b52e31",
+    "cSpell.words": [
+        "centriq",
+        "ftleavenworth",
+        "highlandsranch",
+        "macdill",
+        "opks"
+    ]
 }
