--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: bacongobbler/azure-blob-storage-upload@main
         with:
-          source_dir: $GITHUB_WORKSPACE/
+          source_dir: ${{ github.repository }}
           container_name: $web
           connection_string: ${{ secrets.AZURE_CONNECTION_STRING }}
           overwrite: 'true'
