--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: bacongobbler/azure-blob-storage-upload@main
         with:
-          source_dir: /**/
+          source_dir: /home/runner/work/MapboxGl-Map-Resume-v0.5/MapboxGl-Map-Resume-v0.5
           container_name: $web
           connection_string: ${{ secrets.AZURE_CONNECTION_STRING }}
           overwrite: 'true'
