--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,17 @@
         "titleBar.inactiveForeground": "#e7e7e799",
         "statusBar.background": "#b52e31",
         "statusBarItem.hoverBackground": "#d04649",
-        "statusBar.foreground": "#e7e7e7"
+        "statusBar.foreground": "#e7e7e7",
+        "activityBar.activeBackground": "#d04649",
+        "commandCenter.border": "#e7e7e799",
+        "editorGroup.border": "#d04649",
+        "panel.border": "#d04649",
+        "sash.hoverBorder": "#d04649",
+        "sideBar.border": "#d04649",
+        "statusBar.border": "#b52e31",
+        "statusBarItem.remoteBackground": "#b52e31",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.border": "#b52e31"
     },
     "peacock.color": "#b52e31",
     "cSpell.words": [
